--- a/gdextension_build/SConstruct
+++ b/gdextension_build/SConstruct
@@ -116,9 +116,11 @@ def install_gdextension_libname(target, source, env):
     methods.osx_rename_libname("^@.*framework/", "@loader_path/../", "", [lib.get_path() for lib in target])
 
 
-ffmpeg_install_action = ffmpeg_download.ffmpeg_install(env, f"#{addon_platform_dir}", ffmpeg_path)
+if env["platform"] == "windows":
+    ffmpeg_install_action = ffmpeg_download.ffmpeg_install(env, f"#{addon_platform_dir}", ffmpeg_path)
+    env.Depends(sources, ffmpeg_install_action)
+
 env.Depends(sources, env.Install(addon_base_dir, "ffmpeg.gdextension"))
-env.Depends(sources, ffmpeg_install_action)
 
 env.GLSL_HEADER("../yuv_to_rgb.glsl")
 env.Depends(Glob("../*.glsl.gen.h"), ["#glsl_builders.py"])
@@ -126,7 +128,6 @@ env.Depends(Glob("../*.glsl.gen.h"), ["#glsl_builders.py"])
 Default(library)
 
 if env["platform"] == "macos":
-    env.AddPostAction(ffmpeg_install_action, env.Action(install_ffmpeg_libname))
     env.AddPostAction(library, env.Action(install_gdextension_libname))
 
 
